durga@48demo.com.bleadtest/src/objects/SecurityControls__c.object
<CustomObject>
    <fields>
        <fullName>EV_Fields__c</fullName>
        <defaultValue>&quot;AS_FirstName__c,AS_Company__c,AS_Prefix__c,AS_Suffix__c,AS_Title__c,AS_CellPhone__c,AS_Age__c,AS_Gender__c,AS_BirthDate__c,AS_HomeAddress1__c,AS_ShippingAddress1__c,AS_WorkAddress1__c,AS_NAICSCode1__c,AS_NAICSCode2__c,AS_NAICSCode3__c,AS_NAICSCode4__c,AS_NAICSCode5__c,AS_PrimaryBusinessCategory__c,AS_SecondaryBusinessCategory__c,AS_NumberOfEmployees__c,AS_BusinessEstablishedDate__c,AS_BusinessRevenue__c,AS_BusinessTaxId__c,AS_BusinessDunsNumber__c,AS_WebsiteUrl__c,AS_BlogUrl__c,AS_DiversityType__c,AS_BusinessDescription__c,AttendeePic&quot;</defaultValue>
        <label>EV_Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Req_Fields__c</fullName>
        <label>EV_Req_Fields</label>
        <length>32767</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventId</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>SecurityControls</relationshipLabel>
        <relationshipName>SecurityControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SecurityControls</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_Fields__c</columns>
        <columns>EV_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC_{00000000}</displayFormat>
        <label>SC_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SecurityControls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>